# braid-rs

./: BACKLOG.md  Cargo.toml  README.md  TODO.xit
benches/: core_stack_executor.rs  criterion_stack_api.rs  fastnoise_worldgen.rs
docs/: architecture.md  writing_planners_and_backends.md
examples/: lanes_showcase.rs  terrain_stack.rs
fastnoise/: Cargo.toml
fastnoise/src/: fastnoise_lite.rs  lib.rs  model.rs  runtime.rs  scenarios.rs  tests.rs
src/: compute.rs  cpu.rs  error.rs  executor.rs  job.rs  lib.rs  pipeline.rs  planner.rs  scratch.rs  slot_table.rs  stack.rs  tests.rs  version.rs
