[package]
name = "braid"
version = "0.1.0"
edition = "2024"
readme = "README.md"

[workspace]
members = [".", "fastnoise"]
resolver = "3"

[lib]
path = "src/lib.rs"

[[bench]]
name = "core_stack_executor"
harness = false

[[bench]]
name = "fastnoise_worldgen"
harness = false

[dev-dependencies]
braid-fastnoise = { path = "fastnoise" }

[workspace.lints.rust]
redundant_imports = "warn"
unused_imports = "warn"
future-incompatible = "warn"
nonstandard_style = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all = { priority = 1, level = "deny" }

unwrap_used = { priority = 11, level = "deny" }
redundant_clone = { level = "deny", priority = 9 }
manual_while_let_some = { level = "deny", priority = 4 }
needless_return = { level = "deny", priority = 8 }
redundant_else = { level = "deny", priority = 8 }
unwrap_or_default = { level = "deny", priority = 8 }
manual_unwrap_or_default = { level = "deny", priority = 8 }
