[package]
name = "braid-fastnoise"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
path = "src/lib.rs"

[features]
default = ["std"]
f64 = []
std = ["num-traits/std"]
libm = ["num-traits/libm"]

[dependencies]
braid = { path = ".." }
num-traits = { version = "0.2.18", optional = true, default-features = false }
